overflow-y: scroll to prevent content jumping sideways on pages

--- a/assets/scss/lol.scss
+++ b/assets/scss/lol.scss
@@ -5,6 +5,7 @@
 body {
   background: #eeeeee;
   margin: 0;
+  overflow-y: scroll;
 
   * {
     font-family: Helvetica, Arial, sans-serif;
@@ -66,7 +67,7 @@ a {
     display: inline-block;
     transition-property: color, transform;
     transition-duration: 150ms;
-  
+
     &:hover {
       transform: translateY(-2px);
       text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
